--- a/src/main/resources/templates/market/AdminPage.html
+++ b/src/main/resources/templates/market/AdminPage.html
@@ -30,9 +30,17 @@
 </head>
 <body>
 <!-- 상단 내비바 -->
-<div th:replace="~{common/Navibar :: body}"></div>
-<!-- 우측 메뉴바-->
-<div class="market-menu" th:include="~{/market/MarketMenubar :: body}"></div>
+<nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
+    <div class="container px-4 px-lg-5">
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+    <li class="nav-item" th:if="${session.admin}">
+        <a class="nav-link" th:href="@{/logout}">관리자 로그아웃</a>
+    </li>
+</ul>
+</div>
+    </div>
+</nav>
 <!-- Header -->
 <header class="py-5" style="background-color: #0E46A3">
     <div class="container px-4 px-lg-5 my-5">
