--- a/src/main/resources/templates/signin/adminLogin.html
+++ b/src/main/resources/templates/signin/adminLogin.html
@@ -44,16 +44,15 @@
             border:none;
             border-radius:25px;
         }
-
     </style>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <body>
-<section class="login-form" th:unless="${session.user}">
-    <h1>LETSGO</h1>
-    <form th:action="@{/signin}" method="post">
+<section class="login-form" th:unless="${session.admin}">
+    <h1>LETSGO ADMIN</h1>
+    <form th:action="@{/signin/admin}" method="post">
         <div class="input">
-            <input type="text" name="id" id="id" required> <label for="id">ID</label>
+            <input type="text" name="name" id="name" required> <label for="name">name</label>
         </div>
         <div class="input">
             <input type="password" name="password" id="password" required> <label for="password">PASSWORD</label>
@@ -62,11 +61,9 @@
             <button type="submit">LOGIN</button>
         </div>
     </form>
-    <a href="/signin/adminLogin">관리자인가요?</a>
-    <a href="/letsGo">메인으로 이동</a>
 </section>
-<p th:if="${session.user}" style="text-align: center;">이미 로그인되어 있습니다.</p>
-<div th:if="${session.user}" style="text-align: center;">
+<p th:if="${session.admin}" style="text-align: center;">이미 로그인되어 있습니다.</p>
+<div th:if="${session.admin}" style="text-align: center;">
     <a href="/letsGo"><button>메인으로 이동</button></a>
 </div>
 </body>
