--- a/src/main/resources/templates/signin/adminLogin.html
+++ b/src/main/resources/templates/signin/adminLogin.html
@@ -64,7 +64,7 @@
 </section>
 <p th:if="${session.admin}" style="text-align: center;">이미 로그인되어 있습니다.</p>
 <div th:if="${session.admin}" style="text-align: center;">
-    <a href="/letsGo"><button>메인으로 이동</button></a>
+    <a th:href="@{/admin/list}"><button>관리자 페이지로 이동</button></a>
 </div>
 </body>
 </html>
