--- a/src/main/resources/templates/market/Market.html
+++ b/src/main/resources/templates/market/Market.html
@@ -67,6 +67,7 @@
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 <div class="col mb-5" th:if="${product != null}" th:each="product : ${productList}">
                     <div class="card h-100">
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem" th:text="${product.productState}">판매 상태</div>
                         <!-- Product image -->
                         <img class="card-img-top" th:src="${product.productImg}" alt="Product Image" />
                         <!-- Product details -->
