--- a/src/main/resources/templates/market/ProductDetailView.html
+++ b/src/main/resources/templates/market/ProductDetailView.html
@@ -71,7 +71,6 @@
                             <i class="bi-cart-fill me-1"></i>
                             장바구니 담기
                         </button>
-
                         <form action="/cart/add" method="post">
                             <input type="hidden" name="productId" th:value="${product.productId}"/>
                             <button class="btn btn-outline-dark flex-shrink-0"
@@ -81,6 +80,13 @@
                                 장바구니 담기
                             </button>
                         </form>
+                        <button class="btn btn-outline-dark flex-shrink-0"
+                                type="button"
+                                th:if="${product.productState == '판매완료'}"
+                                disabled>
+                            <i class="bi-cart-fill me-1"></i>
+                            판매완료
+                        </button>
                     </div>
                 </div>
             </div>
