--- a/src/main/resources/templates/market/Market.html
+++ b/src/main/resources/templates/market/Market.html
@@ -65,7 +65,7 @@
     <section class="py-5">
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                <div class="col mb-5" th:if="${product != null}" th:each="product : ${productList}">
+                <div class="col mb-5" th:if="${product.isAccept == 1}" th:each="product : ${productList}">
                     <div class="card h-100">
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem" th:text="${product.productState}">판매 상태</div>
                         <!-- Product image -->
