--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -118,7 +118,7 @@
                     <span style="font-size: 10pt; color:gray;">할인 적용 금액은 주문서 작성의 결제 예정 금액에서 확인 가능합니다.</span>
                 </div>
             </div>
-            <div style="margin: 10px 0;">
+            <!--<div style="margin: 10px 0;">
                 <span style="margin: 0 10px;" class="btnfloat">선택 상품을</span>
                 <form th:action="@{/cart/remove/{cartId}(cartId=${cartItem.cartId})}" method="post">
                     <input type="hidden" name="_method" value="delete"/>
@@ -126,7 +126,7 @@
                 </form>
                 <button class="btn default btnfloat2">장바구니 비우기</button>
                 <span class="clearboth"></span>
-            </div>
+            </div>-->
             <br/><br/>
 
             <table class="calculation2">
@@ -144,9 +144,11 @@
             <br/><br/>
 
             <div align="center">
-                <button class="btn default" id="allProduct">전체 상품 주문</button>
-                <button class="btn default backBtn" id="productClear">선택 상품 주문</button>
-                <button class="btn default footerbtn" id="footerbtn">쇼핑 계속하기</button>
+                <form action="/pay/confirm" method="get">
+                    <button type="submit" class="btn default" id="allProduct">전체 상품 주문</button>
+                    <button type="submit" class="btn default backBtn" id="productClear">선택 상품 주문</button>
+                </form>
+                <button class="btn default footerbtn" id="footerbtn" th:href="@{/market/list}">쇼핑 계속하기</button>
                 <span class="clearboth"></span>
             </div>
         </form>
@@ -171,15 +173,14 @@
             $.ajax({
                 url: '/cart/remove/' + cartId,
                 type: 'DELETE',
-                success: function(result) {
+                success: function (result) {
                     window.location.reload();
                 },
-                error: function(error) {
+                error: function (error) {
                     alert("삭제 실패");
                 }
             });
         }
     }
-
 </script>
 </html>
