--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -6,12 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/cart.css">
-    <script th:if="${loginRequired}">
-        $(document).ready(function() {
-            alert("로그인이 필요합니다.");
-            window.location.href = '/market/list';
-        });
-    </script>
 </head>
 <body>
     <div th:replace="~{common/Navibar :: body}"></div>
@@ -162,7 +156,7 @@
         xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
         xhr.onreadystatechange = function () {
             if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                location.reload(); // 성공적으로 처리된 경우 페이지 새로고침
+                location.reload();
             }
         };
         xhr.send("cartId=" + encodeURIComponent(cartId) + "&amount=" + encodeURIComponent(newAmount));
