--- a/src/main/resources/templates/market/MarketMenubar.html
+++ b/src/main/resources/templates/market/MarketMenubar.html
@@ -29,7 +29,13 @@
             <a href="#">wish</a>
         </li>
         <li>
-            <a th:href="@{/market/manager}">go to manager's page</a>
+            <div th:if="${session == null}">
+                <div style="text-align: center; margin-top: 50px;">
+                    <p>로그인이 필요한 서비스입니다.</p>
+                    <a th:href="@{/signin/signin}" class="btn btn-primary">로그인 하러 가기</a>
+                </div>
+            </div>
+            <a th:href="@{/market/manager}" th:if="${session != null}">go to manager's page</a>
         </li>
     </ul>
 </aside>
