--- a/src/main/resources/templates/salesManager/SalesManager.html
+++ b/src/main/resources/templates/salesManager/SalesManager.html
@@ -1,56 +1,50 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Lets Go - salesManager</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="UTF-8">
+    <title>Lets Go - My Products</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<style type="text/css">
-    @font-face {
-        font-family: 'Pretendard-Regular';
-        src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-        font-weight: 400;
-        font-style: normal;
-    }
-    * {
-        font-family: 'Pretendard-Regular', 'sans-serif';
-    }
-    a {
-        text-decoration: none;
-        color: inherit;
-    }
-    #scm2012_header2 {
-		float: right;
-		list-style: none;
-		display: inline;
-		margin: 5px 0 0 0;
-		font-size: 11px;
-        padding-right: 5px;
-		padding-bottom: 9px;
-	}
-
-	#scm2012_header2 div {
-		float: right;
-		padding: 8px 0 0 8px;
-	}
-
-	#scm2012_header2 div a:link {
-		color: #666666;text-decoration: none;
-	}
-
-	.navbar-nav .nav-link,
-	.navbar-nav .dropdown-toggle,
-    .navbar-nav .dropdown-menu .dropdown-item {
+    <style>
+        @font-face {
+            font-family: 'Pretendard-Regular';
+            src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+            font-weight: 400;
+            font-style: normal;
+        }
+        * {
+            font-family: 'Pretendard-Regular', 'sans-serif';
+        }
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+        #scm2012_header2 {
+            float: right;
+            list-style: none;
+            display: inline;
+            margin: 5px 0 0 0;
+            font-size: 11px;
+            padding-right: 5px;
+            padding-bottom: 9px;
+        }
+        #scm2012_header2 div {
+            float: right;
+            padding: 8px 0 0 8px;
+        }
+        .navbar-nav .nav-link,
+        .navbar-nav .dropdown-toggle,
+        .navbar-nav .dropdown-menu .dropdown-item {
             color: white !important;
-    }
-    .logo-container {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-    }
-</style>
+        }
+        .logo-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+    </style>
+</head>
 <body>
-<div id="scmC2CtopHeader">
+    <div id="scmC2CtopHeader">
     <table width="1000" border="0" cellspacing="0">
         <tr>
             <td>
@@ -71,15 +65,39 @@
         </tr>
     </table>
 </div>
-<nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
+    <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="background-color: #0E46A3;">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item"><a class="nav-link" href="javascript:void(0);" onclick="openPopup()">중고 상품 등록</a></li>
-            <li class="nav-item"><a class="nav-link" th:href="@{/record/view}">상품 조회/수정</a></li>
-            <li class="nav-item"><a class="nav-link" th:href="@{/challenge/all}">판매관리</a></li>
+            <li class="nav-item"><a class="nav-link">판매관리</a></li>
         </ul>
     </div>
 </nav>
+
+    <div class="container mt-5">
+    <h2>내 상품 목록</h2>
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th>상품명</th>
+            <th>가격</th>
+            <th>수량</th>
+            <th>상태</th>
+            <th>설명</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="product : ${registeredProductList}">
+            <td th:text="${product.productName}"></td>
+            <td th:text="${product.productPrice}"></td>
+            <td th:text="${product.productQuantity}"></td>
+            <td th:text="${product.productState}"></td>
+            <td th:text="${product.productDescription}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 </body>
 <script>
 function openPopup() {
