--- a/src/main/resources/templates/market/CompletePayment.html
+++ b/src/main/resources/templates/market/CompletePayment.html
@@ -21,7 +21,9 @@
         <h1>주문이 완료되었습니다!</h1>
         <p>주문이 정상적으로 처리되었습니다. 고객님의 주문 내역을 확인하실 수 있습니다.</p>
 
-        <a th:href="@{/payment}" class="btn btn-primary">주문 내역 보기</a>
+        <!--<a th:href="@{/payment}" class="btn btn-primary">주문 내역 보기</a>-->
+        <!--민주 수정부분 -->
+        <a th:href="@{/orders}" class="btn btn-primary">주문 내역 보기</a>
         <a th:href="@{/market/list}" class="btn btn-secondary">쇼핑 계속하기</a>
     </div>
 </body>
