[FEAT] 즐겨찾기 기능 구현

--- a/src/main/resources/templates/market/AdminPage.html
+++ b/src/main/resources/templates/market/AdminPage.html
@@ -78,7 +78,7 @@
                 <div class="card h-100">
                     <div class="card-body">
                         <h5 class="fw-bolder" th:text="${pendingProduct.productName}">Product Name</h5>
-                        <p class="fw-bolder" th:text="${pendingProduct.salesManager}">Sales Manager</p>
+                        <p class="fw-bolder" th:text="${pendingProduct.productDescription}">Sales Manager</p>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" th:value="${pendingProduct.productId}" id="item">
                             <label class="form-check-label" for="item">
