[MOD] 민주 주문 조회 파일 통합

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -222,7 +222,7 @@
         <div class="text">게시물 스크랩</div>
         <div class="right">></div>
     </a>
-    <a th:href="@{/orders}" class="item">
+    <a th:href="@{/pay/list}" class="item">
         <div class="icon">ii</div>
         <div class="text">주문 조회하기</div>
         <div class="right">></div>
