[DESIGN] 마이페이지 ui 수정

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -8,124 +8,25 @@
         body {
             padding: 0;
             margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
         }
 
         div {
             box-sizing: border-box;
         }
-        /* alert badge */
-        .circle {
-            display: inline-block;
-            width: 5px;
-            height: 5px;
-            border-radius: 2.5px;
-            background-color: #ff0000;
-            position: absolute;
-            top: -5px;
-            left: 110%;
-        }
-
-        /* 녹색 텍스트 */
-        .green {
-            color: #24855b;
-        }
 
         .wrap {
             background-color: #F8F8F8;
         }
-        /* 녹색배경 */
-        .greenContainer {
-            height: 132px;
-            background-color: #93BFCF;
-            display: flex;
-            align-items: flex-end;
-            padding: 16px;
-        }
 
-        .greenContainer .name {
-            font-size: 20px;
-            font-weight: bold;
-            color: #ffffff;
-        }
-
-        .greenContainer .modify {
-            margin-left: auto;
-        }
-
-        /* 단골상점 , 상품후기 , 적립금 박스 */
-        .summaryContainer {
-            background-color: white;
-            display: flex;
-            padding: 21px 16px;
-            height: 90px;
-            margin-bottom: 10px;
-        }
-        /* 단골상점 , 상품후기 , 적립금 */
-        .summaryContainer .item {
-            flex-grow: 1
-        }
-        /* 녹색 숫자 */
-        .summaryContainer .number {
-            font-size: 19px;
-            font-weight: bold;
-            color: #24855b;
-        }
-        /* 텍스트 */
-        .summaryContainer .item>div:nth-child(2) {
-            font-size: 13px;
-        }
-
-        /* ================== 주문/배송조회 박스 시작 ==================== */
-        .shippingStatusContainer {
-            padding: 21px 16px;
-            background-color: white;
-            margin-bottom: 10px;
-        }
-
-        /* 주문/배송조회 타이틀 */
-        .shippingStatusContainer .title {
-            font-size: 16px;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
-
-        /* 장바구니 결제완료 배송중 구매확정 [로우] */
-        .shippingStatusContainer .status {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 21px;
-        }
-        /* 장바구니 결제완료 배송중 구매확정 [아이템]  */
-        .shippingStatusContainer .item {
-            display: flex;
-        }
-
-        .shippingStatusContainer .number {
-            font-size: 31px;
-            font-weight: 500;
-            text-align: center;
-        }
-
-        .shippingStatusContainer .text {
-            font-size: 12px;
-            font-weight: normal;
-            color: #c2c2c2;
-            text-align: center;
-        }
-
-        .shippingStatusContainer .icon {
-            display: flex;
-            align-items: center;
-            padding: 20px;
-            width: 16px;
-            height: 16px;
-        }
-
-        /*=================== 주문목록 ~ 찜한상품 리스트 ==================*/
         .listContainer {
             padding: 0;
             background-color: #ffffff;
-            margin-bottom: 10px;
+            margin: 20px 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
         }
 
         .listContainer .item {
@@ -134,45 +35,42 @@
             padding: 16px;
             color: black;
             text-decoration: none;
-            height: 56px;
-            box-sizing: border-box;
+            border-bottom: 1px solid #e0e0e0;
+            transition: background-color 0.3s ease;
+        }
+
+        .listContainer .item:last-child {
+            border-bottom: none;
+        }
+
+        .listContainer .item:hover {
+            background-color: #f8f8f8;
         }
 
         .listContainer .icon {
             margin-right: 14px;
+            font-size: 24px;
+            color: #0E46A3;
         }
 
         .listContainer .text {
             font-size: 16px;
-            position: relative;
+            flex-grow: 1;
         }
 
         .listContainer .right {
-            margin-left: auto;
-        }
-
-        /*=================== 내지갑의 보유 적립금 들어가는 부분 ================*/
-        .listContainer .smallLight {
-            font-size: 14px;
+            font-size: 18px;
             color: #c2c2c2;
         }
 
-        .listContainer .smallLight>span {
-            margin-left: 10px;
-        }
-
-        .listContainer .right .blct {
-            font-size: 14px;
-            font-weight: bold;
-            margin-right: 5px;
-        }
-
-        /* 공지사항 이용안내 고객센터 */
         .infoContainer {
             background-color: white;
             display: flex;
             height: 100px;
-            margin-bottom: 10px;
+            margin: 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
         }
 
         .infoContainer .item {
@@ -184,55 +82,55 @@
             font-size: 13px;
             text-decoration: none;
             color: black;
+            transition: background-color 0.3s ease;
+        }
+
+        .infoContainer .item:hover {
+            background-color: #f8f8f8;
         }
 
         .infoContainer .item>div:first-child {
             margin-bottom: 2px;
         }
-
-        /*  */
-        .listContainer .item:hover {
-            /*   background-color: #f8f8f8; */
-
-        }
-
-        .infoContainer .item:hover {
-            /*   background-color: #f8f8f8; */
-
-        }
     </style>
 </head>
+<link rel="stylesheet" href="/css/font.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <body>
-<div class="wrap">
-    <div class="greenContainer">
-        <div>
-            <div class="name">MYPAGE</div>
+    <div th:replace="~{common/Navibar :: body}"></div>
+
+    <!-- Header -->
+    <header class="py-5" style="background-color: #0E46A3">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="text-center text-white">
+                <h1 class="display-4 fw-bolder">Let's Go My page</h1>
+                <p class="lead fw-normal text-white-50 mb-0">마이 페이지</p>
+            </div>
+        </div>
+    </header>
+
+    <div class="listContainer">
+        <a th:href="@{/mypage/memberinfo}" class="item">
+            <div class="icon">👤</div>
+            <div class="text">내 정보 수정하기</div>
+            <div class="right">></div>
+        </a>
+        <a th:href="@{/scraps(user_id=${user.user_id})}" class="item">
+            <div class="icon">🔖</div>
+            <div class="text">게시물 스크랩</div>
+            <div class="right">></div>
+        </a>
+        <a th:href="@{/pay/list}" class="item">
+            <div class="icon">🛒</div>
+            <div class="text">주문 조회하기</div>
+            <div class="right">></div>
+        </a>
+        <div class="infoContainer">
+            <a th:href="@{/letsGo}" class="item">
+                <div>🏠</div>
+                <div>메인페이지</div>
+            </a>
         </div>
     </div>
-</div>
-<div class="listContainer">
-    <a th:href="@{/mypage/memberinfo}" class="item">
-        <div class="icon">ii</div>
-        <div class="text">내 정보 수정하기</div>
-        <div class="right">></div>
-    </a>
-    <a th:href="@{/scraps(user_id=${user.user_id})}" class="item">
-        <div class="icon">ii</div>
-        <div class="text">게시물 스크랩</div>
-        <div class="right">></div>
-    </a>
-    <a th:href="@{/pay/list}" class="item">
-        <div class="icon">ii</div>
-        <div class="text">주문 조회하기</div>
-        <div class="right">></div>
-    </a>
-    <div class="infoContainer">
-        <a th:href="@{/letsGo}" class="item">
-            <div>icon</div>
-            <div>메인페이지</div>
-        </a>
-    </div>
-</div>
 </body>
 </html>
