--- a/src/main/resources/templates/market/CompletePayment.html
+++ b/src/main/resources/templates/market/CompletePayment.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>주문 완료</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/font.css">
     <style>
         .container {
             max-width: 800px;
