--- a/src/main/resources/templates/mypage/order.html
+++ b/src/main/resources/templates/mypage/order.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>User Orders</title>
+    <link rel="stylesheet" href="/css/font.css">
     <style>
         body {
             font-family: Arial, sans-serif;
