[MOD] 마지막 수정!

--- a/src/main/resources/templates/market/CompletePayment.html
+++ b/src/main/resources/templates/market/CompletePayment.html
@@ -24,7 +24,7 @@
 
         <!--<a th:href="@{/payment}" class="btn btn-primary">주문 내역 보기</a>-->
         <!--민주 수정부분 -->
-        <a th:href="@{/orders}" class="btn btn-primary">주문 내역 보기</a>
+        <a th:href="@{/pay/list}" class="btn btn-primary">주문 내역 보기</a>
         <a th:href="@{/market/list}" class="btn btn-secondary">쇼핑 계속하기</a>
     </div>
 </body>
