--- a/src/main/resources/templates/signup/signup.html
+++ b/src/main/resources/templates/signup/signup.html
@@ -83,20 +83,21 @@
         }
 
         form dl dt {
-            width: 100px;
             font-weight: bold;
             color: #333;
+            width: 100px;
         }
 
         form dl dd {
             margin-left: 10px;
+            width: calc(100% - 110px);
         }
 
         form input[type="text"],
         form input[type="password"],
         form input[type="email"],
         form select {
-            width: calc(100% - 120px);
+            width: 100%;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
